2006-12-04  Jan Beulich  <jbeulich@novell.com>

	* ld-elf/eh-frame-hdr.d: New.
	* ld-elf/eh-frame-hdr.s: New.
	* ld-ia64/tlsbin.dd, ld-ia64/tlsbin.sd: Don't depend on exact linkage
	table layout.

2006-11-23  Thiemo Seufer  <ths@mips.com>

	* ld-elf/warn2.d: Match regex also for the second segment.

2006-11-22  Daniel Jacobowitz  <dan@codesourcery.com>

	* ld-arm/mixed-app.d, ld-arm/tls-app.d, ld-arm/tls-lib.d: Update
	for $d support.

2006-11-21  Jakub Jelinek  <jakub@redhat.com>

	* ld-elf/eh5.d: New test.
	* ld-elf/eh5.s: New file.
	* ld-elf/eh5a.s: New file.
	* ld-elf/eh5b.s: New file.

2006-11-13  Daniel Jacobowitz  <dan@codesourcery.com>

	* ld-arm/arm-dyn.ld, ld-arm/arm-lib.ld: Remove .stack.
	* ld-arm/armthumb-lib.d, ld-arm/mixed-app.d, ld-arm/mixed-lib.d:
	Allow smaller section gap.
	* ld-arm/armthumb-lib.sym, ld-arm/mixed-lib.sym: Reorder.  Remove
	_stack.
	* ld-arm/mixed-app.sym: Remove _stack.
	* ld-arm/tls-app.d: Update start address.

2006-11-08  Alan Modra  <amodra@bigpond.net.au>

	* ld-elf/group.ld: Handle .rodata.brlt for powerpc64.

2006-11-07  Vladimir Prus  <vladimir@codesourcery.com>  

	* testsuite/ld-elf/symbol2w.s: Use "%" instead of "@" to avoid
	breakage on ARM.

2006-11-06  Vladimir Prus  <vladimir@codesourcery.com>  

	* testsuite/ld-elf/symbol1ref.s: Use ".dc.a" instead
	of ".long".

2006-11-06  Vladimir Prus  <vladimir@codesourcery.com>  

	* testsuite/ld-elf/warn2.d: New.
	* testsuite/ld-elf/symbol2w.s: New.
	* testsuite/ld-elf/symbol2ref.s: New.   

2006-11-05  Hans-Peter Nilsson  <hp@axis.com>

	* ld-cris/ldsym1.d: Adjust for semi-recent ld changes.

2006-11-02  Daniel Jacobowitz  <dan@codesourcery.com>

	* ld-discard/zero-rel.d, ld-discard/zero-rel.s: New files.

2006-11-01  Thiemo Seufer  <ths@mips.com>

	* ld-mips-elf/mips16-intermix-1.s, ld-mips-elf/mips16-intermix-2.s,
	ld-mips-elf/mips16-intermix.d: New testcase.
	* ld-mips-elf/mips-elf.exp (mips16_intermix_test): Run new testcases.
