@@ -1,3 +1,12 @@
+2006-12-05  Jakub Jelinek  <jakub@redhat.com>
+	    Alan Modra  <amodra@bigpond.net.au>
+
+	* ld-elfvsb/sh1.c (overriddenvar, shlib_overriddencall2,
+	shared_data): If !SHARED, move to...
+	* ld-elfvsb/sh2.c: ... here.
+	* ld-elfvsb/elfvsb.exp: Add -DSHARED to compiler options when
+	building with $picflag.
+
 2006-12-04  Jan Beulich  <jbeulich@novell.com>
 
 	* ld-elf/eh-frame-hdr.d: New.
